...
                    .font(.title2.bold())
            }
            .padding()
            .border(.secondary)
            Group{
                HStack{
                    inputBox(section: "First Name", placeHolder: "first name", input: $firstNm)
                    inputBox(section: "Last Name", placeHolder: "last name", input: $lastNm)
                }
                HStack{
                    inputBox(section: "Check-in date", placeHolder: "check-in", input: $checkinStr)
                        .onSubmit {
                            if let date = checkinStr.toDate{
                                checkinDate = date
                            }
                        }
                    inputBox(section: "Check-out date", placeHolder: "check-out", input: $checkoutStr)
                        .onSubmit {
                            if let date = checkoutStr.toDate{
                                checkoutDate = date
                            }
                        }
                }
                HStack{
                    inputBox(section: "Adults", placeHolder: "adults", input: $adult)
                        .keyboardType(.numberPad)
                    inputBox(section: "Children", placeHolder: "childrens", input: $kid)
                        .keyboardType(.numberPad)
                    
                    VStack(alignment: .leading){
                        Text("Room")
                            .font(.headline)
                        Text("\(rmNumber)")
...
                    Text("Travel for business?")
                        .font(.headline)
                    HStack{
                        ForEach(TravelFor.allCases,id: \.self){ Tfor in
                            Spacer()
                            HStack{
                                Image(systemName: travelFor == Tfor ? "checkmark.circle.fill" : "circle")
                                if Tfor == .business{
                                    Text("+€150 \nFor \(Tfor.rawValue)")
                                }else{
                                    Text("For \(Tfor.rawValue)")
                                }
                            }
...
                }
                
                isAlert.toggle()
            }, label: {
                HStack{
                    Spacer()
                    Text("Book Now")
                    Spacer()
                }
            })
            .buttonStyle(.borderedProminent)
            .alert("Are you going to book this room?", isPresented: $isAlert, actions: {
                Button("No"){
                    isAlert.toggle()
                }
                Button("Yes"){
                    guard let inDate = checkinDate else {
                        err="check in date format invalid"
                        return
                    }
                    guard let outDate = checkoutDate else {
                        err="check out date format invalid"
...
                Image(systemName: "person")
                    .onTapGesture {
                        vm.page = .tickets
                    }
            }
            Divider()
            TextField("Search a hotel name", text: $search)
                .textFieldStyle(.roundedBorder)
            
            List{
                ForEach(hotels){ hotel in
                    HStack(alignment: .top){
                        Image(hotel.hotel_cover_image.replacingOccurrences(of: ".jpg", with: ""))
...
                                }
                            }.font(.caption)
                            HStack{
                                Text("\(hotel.hotel_to_ski_distance.toStr) km from Alps'ski lift")
                                    .font(.footnote)
                                Spacer()
                                Button("Book it"){
                                    if hotel.hotel_id == 1000 || hotel.hotel_id == 1008 {
                                        vm.selectedHotel = hotel
                                    }
                                }
                                .font(.caption)
                                .buttonStyle(.borderedProminent)
...
